--- a/www/index.html
+++ b/www/index.html
@@ -74,6 +74,9 @@
                             <p>Page content goes here</p>
                             <!-- Link to another page -->
                             <a href="about.html">About app</a>
+
+                            <iframe width="100%" height="100%" src="pdf/11.AUTORES/11.AUTORES.PDF">   
+                            </iframe >
                         </div>
                     </div>
                 </div>
