--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
                             <!-- Link to another page -->
                             <a href="about.html">About app</a>
 
-                            <iframe width="100%" height="100%" src="pdf/11.AUTORES/11.AUTORES.PDF">   
+                            <iframe width="100%" height="100%" src="pdf/11/11.1.PDF">   
                             </iframe >
                         </div>
                     </div>
