--- a/www/index.html
+++ b/www/index.html
@@ -74,9 +74,10 @@
                             <p>Page content goes here</p>
                             <!-- Link to another page -->
                             <a href="about.html">About app</a>
-
-                            <iframe width="100%" height="100%" src="pdf/11/11.1.PDF">   
+						
+                            <iframe width="100%" height="500px" src="pdf/11/11.1.pdf">   
                             </iframe >
+                        
                         </div>
                     </div>
                 </div>
