minor update: changed from iframe to object

--- a/www/index.html
+++ b/www/index.html
@@ -74,10 +74,13 @@
                             <p>Page content goes here</p>
                             <!-- Link to another page -->
                             <a href="about.html">About app</a>
-						
+						<!--
                             <iframe width="100%" height="500px" src="pdf/11/11.1.pdf">   
                             </iframe >
-                        
+                        -->
+                        <object data="pdf/11/11.1.pdf" type="application/pdf" width="100%" height="500px" >
+                        	<a href="pdf/11/11.1.pdf" > Download file.pdf </a>
+                        </object>
                         </div>
                     </div>
                 </div>
