--- a/www/index.html
+++ b/www/index.html
@@ -56,11 +56,11 @@
             </div>
             <div class="item item-text-wrap">
               <div class="list">
-                <a class="item item-icon-left" href="#"><i class="icon ion-arrow-right-b"></i>
+                <a class="item item-icon-left" href="pdf/1/1.1.html"><i class="icon ion-arrow-right-b"></i>
                   Pneumonia </a>
-                <a class="item item-icon-left" href="#"><i class="icon ion-arrow-right-b"></i>
+                <a class="item item-icon-left" href="pdf/1/1.2.html"><i class="icon ion-arrow-right-b"></i>
                   Abordagem da agudização da asma </a>
-                <a class="item item-icon-left" href="#"><i class="icon ion-arrow-right-b"></i>
+                <a class="item item-icon-left" href="pdf/1/1.3.html"><i class="icon ion-arrow-right-b"></i>
                   Doença Pulmonar Obstrutiva Crónica </a>
               </div>
             </div>
