--- a/www/index.html
+++ b/www/index.html
@@ -93,6 +93,36 @@
               </div>
             </div>
           </div>
+          <!--   ###########    METABOL     ############    -->
+          <div class="card">
+            <div class="item item-divider">
+              <a class="item item-icon-left" href="#"><i class="icon ion-arrow-down-a"></i>
+                Doenças metabólicas
+              </a>
+            </div>
+            <div class="item item-text-wrap">
+              <div class="list">
+                <a class="item item-icon-left" href="pdf/3/3.1.html"><i class="icon ion-arrow-right-b"></i>
+                  Critérios de diagnóstico de Diabetes mellitus </a>
+                <a class="item item-icon-left" href="pdf/3/3.2.html"><i class="icon ion-arrow-right-b"></i>
+                  Insulinoterapia em internamento </a>
+                <a class="item item-icon-left" href="pdf/3/3.3.html"><i class="icon ion-arrow-right-b"></i>
+                  Cetoacidose diabética e coma hiperosmolar </a>
+                <a class="item item-icon-left" href="pdf/3/3.4.html"><i class="icon ion-arrow-right-b"></i>
+                  Alterações iónicas </a>
+                <a class="item item-icon-left" href="pdf/3/3.5.html"><i class="icon ion-arrow-right-b"></i>
+                  Desequilíbrios ácido-base </a>
+                <a class="item item-icon-left" href="pdf/3/3.6.html"><i class="icon ion-arrow-right-b"></i>
+                  Intoxicações medicamentosas </a>
+                <a class="item item-icon-left" href="pdf/3/3.7.html"><i class="icon ion-arrow-right-b"></i>
+                  Intoxicações não medicamentosas </a>
+                <a class="item item-icon-left" href="pdf/3/3.8.html"><i class="icon ion-arrow-right-b"></i>
+                  Síndrome de abstinência a opiáceos</a>
+                <a class="item item-icon-left" href="pdf/3/3.9.html"><i class="icon ion-arrow-right-b"></i>
+                  Síndrome de abstinência etanólica</a>
+              </div>
+            </div>
+          </div>
           <!--   ###########    CARDIO     ############    -->
       </ion-content>
 
