--- a/www/index.html
+++ b/www/index.html
@@ -61,7 +61,7 @@
               <div class="list">
                 <a class="item item-icon-left" href="pdf/1/1.11.html"><i class="icon ion-arrow-right-b"></i>
                   Pneumonia </a>
-                  <a class="item item-icon-left" href="pdf/1/1.1.pdf"><i class="icon ion-arrow-right-b"></i>
+                  <a class="item item-icon-left" href="pdf/1/slides.html"><i class="icon ion-arrow-right-b"></i>
                   Pneumonia </a>
                 <a class="item item-icon-left" href="pdf/1/1.21.html"><i class="icon ion-arrow-right-b"></i>
                   Abordagem da agudização da asma </a>
